[package]
name = "icub3d_combinatorics"
license = "MIT"
license-file = "LICENSE"
version = "0.1.0"
authors = ["Joshua Marsh (icub3d) <joshua@themarshians.com>"]
edition = "2018"
repository = "https://git.themarshians.com/icub3d/combinatorics"
keywords = ["permutation", "combination", "combinatorics", "permutations", "combinations"]
categories = ["algorithms", "mathematics"]
readme = "README.md"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
