[package]
name = "dinglebit_combinatorics"
description = "A collection of combinatorics utilities."
license = "MIT"
license-file = "LICENSE"
version = "0.1.1"
authors = ["Joshua Marsh (icub3d) <joshua@themarshians.com>"]
edition = "2018"
repository = "https://github.com/dinglebit/combinatorics.rs"
keywords = ["permutation", "combination", "combinatorics", "permutations", "combinations"]
categories = ["algorithms", "mathematics"]
readme = "README.md"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
